--- a/foundry.toml
+++ b/foundry.toml
@@ -2,9 +2,16 @@
 src = 'src'
 out = 'out'
 libs = ['lib']
+solc_version = '0.8.13'
+auto_detect_solc = false
+optimizer = true
+optimizer_runs = 20_000
+fuzz_runs = 1_000
 remappings = [
-    'ds-test/=lib/ds-test/src/',
-    '@openzeppelin/=/lib/openzeppelin-contracts/contracts/'
+  "ds-test/=lib/ds-test/src/",
+  "clones-with-immutable-args/=lib/clones-with-immutable-args/src/",
+  "openzeppelin-contracts/=lib/openzeppelin-contracts/contracts/",
+  "forge-std/=lib/forge-std/src/"
 ]
 
 # See more config options https://github.com/gakonst/foundry/tree/master/config
