--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
     "ora": "^6.1.0",
     "readline": "^1.3.0"
   },
+  "scripts": {
+    "lint": "yarn prettier && yarn solhint",
+    "lint:check": "yarn prettier:check && yarn solhint:check",
+    "prettier": "yarn prettier:check --write",
+    "prettier:check": "prettier --check \"src/**/*.sol\"",
+    "solhint": "yarn solhint:check --fix",
+    "solhint:check": "solhint --config ./.solhint.json \"src/**/*.sol\""
+  },
   "type": "module",
   "devDependencies": {
-    "eslint": "^8.11.0"
+    "prettier": "^2.4.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.18",
+    "solhint": "^3.3.6",
+    "solhint-plugin-prettier": "^0.0.5"
   },
   "eslintConfig": {
     "extends": "eslint:recommended",
